--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -54,12 +54,13 @@ body { margin-top : 0; padding-top : 0;}
 	box-shadow: 0px 0px 10px #888;
 }
 a, a:visited, a:hover, a:active {
-	color : #6493D2;
+	color : #FF5500;
 }
+
 h2 {
 	padding : 0; margin:0;
 	font-size:36pt;
-	color:#FF5500;
+	color:#092E67;
 }
 h3 {
 	padding : 0; margin:0;
