--- a/src/main/java/org/wicketTutorial/commons/bootstrap/layout/style.css
+++ b/src/main/java/org/wicketTutorial/commons/bootstrap/layout/style.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+  padding-top: 10px;
   background-color: #FFFFFF;
   font-size: 16px;
   margin-bottom: 150px;
@@ -17,15 +17,15 @@ html {
 
 .footer {
   background-color: #F3F3F3;
-  padding: 20px 0px;
-  margin-top: 20px;
+  padding: 10px 10px;
+  margin-top: 10px;
   border-top: 1px solid #E5E5E5;
   color: #777;
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 150px; 
+  height: 50px;
   overflow: hidden;
 }
 
@@ -43,6 +43,10 @@ html {
 	padding-right: 10px
 }
 
+
+.footer-links {
+    margin-top: 0px;
+}
 /*
  * Global add-ons
  */
